--- a/Assignment1/Views/Account/Register.cshtml
+++ b/Assignment1/Views/Account/Register.cshtml
@@ -1,5 +1,38 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    ViewData["Title"] = "Register";
 }
+
+<h2>Register</h2>
+
+@if (ViewBag.Error != null)
+{
+    <div style="color:red">@ViewBag.Error</div>
+}
+@if (TempData["Message"] != null)
+{
+    <div style="color:green">@TempData["Message"]</div>
+}
+
+<form asp-controller="Account" asp-action="Register" method="post">
+    <div>
+        <label>Username:</label>
+        <input type="text" name="username" required />
+    </div>
+    <div>
+        <label>Password:</label>
+        <input type="password" name="password" required />
+    </div>
+    <div>
+        <label>Role:</label>
+        <select name="role" required>
+            <option value="">--Select Role--</option>
+            <option value="Customer">Customer</option>
+            <option value="Admin">Admin</option>
+        </select>
+    </div>
+    <div>
+        <button type="submit">Register</button>
+    </div>
+</form>
+
+<p>Already have an account? <a asp-controller="Account" asp-action="Login">Login here</a>.</p>
