--- a/Assignment1/Views/Admin/ManageUsers.cshtml
+++ b/Assignment1/Views/Admin/ManageUsers.cshtml
@@ -1,5 +1,31 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    ViewData["Title"] = "Manage Users";
 }
+
+<h2>Manage Users</h2>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>Username</th>
+            <th>Email</th>
+            <th>Role</th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var user in Model)
+        {
+            <tr>
+                <td>@user.Username</td>
+                <td>@user.Email</td>
+                <td>@user.Role</td>
+                <td>
+                    <!-- Add options for user management -->
+                    <a href="@Url.Action("EditUser", new { userId = user.UserId })" class="btn btn-warning">Edit</a>
+                    <!-- Add other actions (deactivate, delete) -->
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
