--- a/Assignment1/Views/Product/AddProduct.cshtml
+++ b/Assignment1/Views/Product/AddProduct.cshtml
@@ -1,4 +1,4 @@
-﻿@model Assignment1.Models.Product
+﻿@model ECommerce.Models.Product
 
 @{
     ViewData["Title"] = "Add Product";
@@ -6,11 +6,7 @@
 
 <h2>Add a New Product</h2>
 
-<form asp-action="Add" method="post">
-    <div class="form-group">
-        <label asp-for="ProductId"></label>
-        <input asp-for="ProductId" class="form-control" />
-    </div>
+<form asp-controller="Product" asp-action="SaveProduct" method="post">
     <div class="form-group">
         <label asp-for="Name"></label>
         <input asp-for="Name" class="form-control" />
@@ -18,6 +14,23 @@
     <div class="form-group">
         <label asp-for="Price"></label>
         <input asp-for="Price" class="form-control" />
+    </div>
+    <div class="form-group">
+        <label asp-for="Category"></label>
+        <select asp-for="Category" >
+            <option value="">--Select--</option>
+            <option value="Toys">Toys</option>
+            <option value="Icecream">Icecream</option>
+            <option value="Food">Food</option>
+        </select>
+    </div>
+    <div class="form-group">
+        <label asp-for="Stock"></label>
+        <input asp-for="Stock" class="form-control" />
+    </div>
+    <div class="form-group">
+        <label asp-for="Description"></label>
+        <input asp-for="Description" class="form-control" />
     </div>
     <button type="submit" class="btn btn-success">Add Product</button>
 </form>
