--- a/Assignment1/Views/_ViewImports.cshtml
+++ b/Assignment1/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using Assignment1
-@using Assignment1.Models
+﻿@using ECommerce
+@using ECommerce.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
