--- a/Assignment1/Views/Product/Details.cshtml
+++ b/Assignment1/Views/Product/Details.cshtml
@@ -1,19 +1,16 @@
 ﻿@model ECommerce.Models.Product
 
+@{
+    ViewData["Title"] = "Product Details";
+}
+
 <h2>Product Details</h2>
 
-<dl class="dl-horizontal">
-    <dt>Product ID</dt>
-    <dd>@Model.ProductId</dd>
+<div class="card p-3">
+    <h4>@Model.Name</h4>
+    <p><strong>Price:</strong> ₹@Model.Price</p>
+    <p><strong>Category:</strong> @Model.Category</p>
+    <p><strong>Description:</strong> @Model.Description</p>
 
-    <dt>Name</dt>
-    <dd>@Model.Name</dd>
-
-    <dt>Price</dt>
-    <dd>@Model.Price</dd>
-
-    <dt>Category</dt>
-    <dd>@Model.Category</dd>
-</dl>
-
-<a class="btn btn-secondary" href="@Url.Action("Index")">Back to Product List</a>
+    <a asp-action="Index" class="btn btn-secondary">Back to Products</a>
+</div>
