--- a/Assignment1/Views/Product/Manage.cshtml
+++ b/Assignment1/Views/Product/Manage.cshtml
@@ -1,4 +1,4 @@
-﻿@model ECommerce.Models.Product
+﻿@model ECommerce.Models.ProductManage
 
 @{
     ViewData["Title"] = "Add Product";
@@ -8,6 +8,8 @@
 
 <form asp-controller="Product" asp-action="SaveProduct" method="post">
     <div class="form-group">
+        <input type="hidden" asp-for="Action" />
+        <input type="hidden" asp-for="ProductId" />
         <label asp-for="Name"></label>
         <input asp-for="Name" class="form-control" />
     </div>
@@ -17,7 +19,7 @@
     </div>
     <div class="form-group">
         <label asp-for="Category"></label>
-        <select asp-for="Category" >
+        <select asp-for="Category">
             <option value="">--Select--</option>
             <option value="Toys">Toys</option>
             <option value="Icecream">Icecream</option>
