--- a/Assignment1/Views/Shared/_Layout.cshtml
+++ b/Assignment1/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                         <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Products</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Cart" asp-action="Index"></a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Cart" asp-action="Index">Cart</a>
                     </li>
 
                     @if (User.Identity.IsAuthenticated)
