--- a/Assignment1/Views/Home/Dashboard.cshtml
+++ b/Assignment1/Views/Home/Dashboard.cshtml
@@ -14,7 +14,7 @@
 		{
 			<div class="col-md-4 mb-4">
 				<div class="card shadow h-100">
-					@* <img src="@item.ImageUrl" class="card-img-top" alt="@item.Name" style="height:200px; object-fit:cover;" > *@
+					<img src="@item.ImageUrl" class="card-img-top" alt="@item.Name" style="height:200px; object-fit:cover;" >
 					<div class="card-body">
 						<h5 class="card-title text-primary">@item.Name</h5>
 						<p class="card-text"><strong>₹@item.Price</strong> per item</p>
