--- a/Assignment1/Views/Product/Manage.cshtml
+++ b/Assignment1/Views/Product/Manage.cshtml
@@ -27,8 +27,8 @@
 
         <div class="form-group mb-3">
             <label asp-for="Category"><i class="bi bi-list-check"></i> Category</label>
-            <input asp-for="Category" class="form-control" placeholder="Enter Category"/>
-            <span asp-validation-for="Category" class="text-danger"></span>     
+            <input asp-for="Category" class="form-control" placeholder="Enter Category" />
+            <span asp-validation-for="Category" class="text-danger"></span>
         </div>
 
         <div class="form-group mb-3">
@@ -39,6 +39,12 @@
         <div class="form-group mb-3">
             <label asp-for="Description"><i class="bi bi-card-text"></i> Description</label>
             <input asp-for="Description" class="form-control" />
+        </div>
+
+        <div class="form-group mb-3">
+            <label asp-for="ImageUrl"><i class="bi bi-image"></i> Image URL</label>
+            <input asp-for="ImageUrl" class="form-control" placeholder="Paste image link (e.g., https://...)" />
+            <span asp-validation-for="ImageUrl" class="text-danger"></span>
         </div>
 
         <div class="d-flex justify-content-between">
