--- a/Assignment1/Views/Shared/_Layout.cshtml
+++ b/Assignment1/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using System.Security.Claims
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
@@ -21,7 +22,7 @@
 			<div class="container-fluid">
 				<a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">ECommerce</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-						aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 
@@ -30,14 +31,17 @@
 						<li class="nav-item">
 							<a class="nav-link text-light" asp-controller="Home" asp-action="Index">Home</a>
 						</li>
-						<li class="nav-item">
-							<a class="nav-link text-light" asp-controller="Product" asp-action="Index">Products</a>
-						</li>
 						@if (User.Identity.IsAuthenticated)
 						{
 							<li class="nav-item">
 								<a class="nav-link text-light" asp-controller="Order" asp-action="Index">MyOrders</a>
 							</li>
+							if (User.FindFirst(ClaimTypes.Role)?.Value == "Admin")
+							{
+								<li class="nav-item">
+									<a class="nav-link text-light" asp-controller="Product" asp-action="Index">Dashboard</a>
+								</li>
+							}
 						}
 					</ul>
 
