Added The AllOrders Feature in the Admin Dashboard

--- a/Assignment1/Views/Auth/Login.cshtml
+++ b/Assignment1/Views/Auth/Login.cshtml
@@ -32,7 +32,7 @@
                 </div>
                 <div class="card-footer text-center">
                     <p>
-                        Don't have an 
+                        Don't have an Account
                         ?
                         <a asp-controller="Auth" asp-action="Register" class="text-decoration-none">Register here</a>.
                     </p>
