--- a/Assignment1/Views/Auth/Register.cshtml
+++ b/Assignment1/Views/Auth/Register.cshtml
@@ -40,7 +40,7 @@
                 </div>
                 <div class="card-footer text-center">
                     <p>
-                        Already have an 
+                        Already have an Account
                         ?
                         <a asp-controller="Auth" asp-action="Login" class="text-decoration-none">Login here</a>.
                     </p>
