--- a/Assignment1/Views/Cart/Index.cshtml
+++ b/Assignment1/Views/Cart/Index.cshtml
@@ -58,7 +58,7 @@ else
     <div class="text-end mt-3">
 
         <a asp-controller="Order" asp-action="Checkout" class="btn btn-success btn-lg">
-            Buy Now
+            Place Order
         </a>
     </div>
 }
