--- a/Assignment1/Views/Shared/_Layout.cshtml
+++ b/Assignment1/Views/Shared/_Layout.cshtml
@@ -31,35 +31,43 @@
 						<li class="nav-item">
 							<a class="nav-link text-light" asp-controller="Home" asp-action="Index">Home</a>
 						</li>
+
 						@if (User.Identity.IsAuthenticated)
 						{
-							<li class="nav-item">
-								<a class="nav-link text-light" asp-controller="Order" asp-action="Index">MyOrders</a>
-							</li>
-							if (User.FindFirst(ClaimTypes.Role)?.Value == "Admin")
+							if (!User.IsInRole("Admin"))
+							{
+								<li class="nav-item">
+									<a class="nav-link text-light" asp-controller="Order" asp-action="Index">MyOrders</a>
+								</li>
+							}
+							if (User.IsInRole("Admin"))
 							{
 								<li class="nav-item">
 									<a class="nav-link text-light" asp-controller="Product" asp-action="Index">Dashboard</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link text-light" asp-controller="Admin" asp-action="AllOrders">Orders</a>
 								</li>
 							}
 						}
 					</ul>
 
+
 					@if (User.Identity.IsAuthenticated)
-{
-	<ul class="navbar-nav ms-auto mb-2 mb-sm-0">
-		<li class="nav-item">
-			<a class="nav-link text-light" asp-controller="Cart" asp-action="Index">
-				<i class="bi bi-cart-fill me-1"></i> Cart
-			</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link text-light" asp-controller="Auth" asp-action="Logout">
-				<i class="bi bi-box-arrow-right me-1"></i> Logout
-			</a>
-		</li>
-	</ul>
-}
+					{
+						<ul class="navbar-nav ms-auto mb-2 mb-sm-0">
+							<li class="nav-item">
+								<a class="nav-link text-light" asp-controller="Cart" asp-action="Index">
+									<i class="bi bi-cart-fill me-1"></i> Cart
+								</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link text-light" asp-controller="Auth" asp-action="Logout">
+									<i class="bi bi-box-arrow-right me-1"></i> Logout
+								</a>
+							</li>
+						</ul>
+					}
 
 				</div>
 			</div>
