--- a/Assignment1/Views/Order/Checkout.cshtml
+++ b/Assignment1/Views/Order/Checkout.cshtml
@@ -22,9 +22,15 @@
         </div>
 
         <div class="mb-3">
-            <label asp-for="Zipcode" class="form-label fw-bold"></label>
-            <input asp-for="Zipcode" class="form-control" />
-            <span asp-validation-for="Zipcode" class="text-danger"></span>
+            <label asp-for="State" class="form-label fw-bold"></label>
+            <input asp-for="State" class="form-control" />
+            <span asp-validation-for="State" class="text-danger"></span>
+        </div>
+
+        <div class="mb-3">
+            <label asp-for="ZipCode" class="form-label fw-bold"></label>
+            <input asp-for="ZipCode" class="form-control" />
+            <span asp-validation-for="ZipCode" class="text-danger"></span>
         </div>
 
         <div class="mb-3">
